en/1.13/_sources/videos.rst.txt
.. spelling::

  Delrieu
  Hieta
  Losada
  Mateusz
  Pusz
  swampUP
  Théo
  Tobias

.. _videos:

Videos and links
=================

- Meeting Embedded 2018: "Continuous Integration of C/C++ for embedded and IoT with Jenkins, Docker and Conan" by Diego Rodriguez-Losada and Daniel Manzaneque.

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/9vq1cpd9Ez0" frameborder="0" allow="autoplay; encrypted-media; allowfullscreen>
      </iframe>

      <br/><br/>

- CppCon 2018: "Git, CMake, Conan - How to ship and reuse our C++ projects" by Mateusz Pusz.

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/S4QSKLXdTtA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
      </iframe>

    <br/><br/>

- JFrog swampUP 2018: "Managing dependencies and toolchains with Conan and Artifactory" by Tobias Hieta

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/jKG6cETLN3M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
      </iframe>

      <br/><br/>

- JFrog swampUP 2018: "Cross building... It's almost too easy!" by Théo Delrieu.

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/Gm2h8ZWCEH4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
      </iframe>

      <br/><br/>

- JFrog Conan Playlist: "Conan - The C/C++ Package Manager"

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLY0Zjn5rFo4OTu5_-pErorGBm0_-UNgCV" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
      </iframe>

      <br/><br/>

- FOSDEM 2018: "Packaging C/C++ libraries with Conan" by Théo Delrieu.

  Includes AndroidNDK package and cross build to Android

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/RDsn0TKcdPQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
      </iframe>

      <br/><br/>


- CppCon 2016: "Introduction to Conan C/C++ Package Manager" by Diego Rodriguez-Losada.

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/xvqH_ck-5Q8" frameborder="0" allowfullscreen>
      </iframe>

      <br/><br/>


- CppCon 2017: "Faster Delivery of Large C/C++ Projects with Conan Package Manager and Efficient Continuous Integration" by Diego Rodriguez-Losada.

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/xA9yRX4Mdz0" frameborder="0" allowfullscreen>
      </iframe>

      <br/><br/>


- "Conan.io C++ Package Manager demo with SFML" by `Charl Botha <http://charlbotha.com/>`_

  .. raw:: html

      <iframe width="560" height="315" src="https://www.youtube.com/embed/RFjvz_Ppbv8" frameborder="0" allowfullscreen>
      </iframe>

      <br/><br/>

Do you have a video, tutorial, blog post that could be useful for other users and would like to share?
Please tell us about it or directly send a PR to our docs: https://github.com/conan-io/docs, and we will link it here.
